[package]
name = "easytidy_converter"
version = "0.2.0"
edition = "2024"
# 本 crate 静态链接 libheif/libde265(LGPL-3.0)，整体以 LGPL-3.0-or-later 分发。
# 详见 LICENSE / COPYING / COPYING.LESSER / NOTICE。
license = "LGPL-3.0-or-later"
repository = "https://github.com/EasyTidy/easytidy_converter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 1. 核心错误处理与日志
anyhow = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

# 2. 图片格式互转 (JPG, PNG, WebP, BMP, GIF)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }
webp = "0.3" # 专门用于高保真/有损 WebP 压缩瘦身

# 3. Markdown 核心解析与互转 (MD -> PDF, MD -> 图片, MD -> Word)
typst = "0.14" # 🌟 核心：替代 Pandoc 的现代渲染引擎，负责 MD -> PDF / 图片
typst-pdf = "0.14"
typst-render = "0.14"
typst-assets = { version = "0.14", default-features = false }
comrak = "0.52" # 负责 Markdown 语法解析
docx-rs = "0.4" # 🌟 核心：纯 Rust 实现的 OpenXML Word 读写器，负责 MD -> Word 以及 Word -> MD
zip = "7"
quick-xml = "0.40"

# 4. Excel 数据抽取 (Excel -> MD/CSV)
calamine = "0.35" # 极速读取 Excel (.xlsx, .xls, .ods)
rust_xlsxwriter = "0.95" # 写入 Excel

# 5. PDF 拆解清洗 (PDF -> 图片, PDF -> Markdown)
pdf_oxide = "0.3"          # 🌟 高性能 PDF 文本/结构化提纯器，MD 输出（含 heading 检测）
pdfium-render = "0.9"      # 🌟 工业级 PDF 光栅化渲染（封装 Google pdfium）
# HTML 解析与生成（MD -> HTML -> PDF 的中间桥梁）
mdka = "2.1"
headless_chrome = "1.0" # 🌟 核心：无头 Chrome 驱动，负责 HTML -> PDF 的高保真渲染
url = "2.5"

# 6. HEIC/HEIF 解码：内嵌 libheif + libde265(HEVC 解码器)，不依赖 Windows「HEIF Image Extensions」商店扩展。
#    仅需解码（本项目从不输出 HEIC），故只用 LGPL 的 de265 解码器，绝不启用 GPL 的 x265 编码器。
libheif-rs = { version = "2.7", default-features = false, features = ["v1_17", "image"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics_Imaging", "Win32_Storage_FileSystem", "Win32_System_Com"] }

# 非 Windows(Linux/macOS)：从内嵌源码用 CMake 编译 libheif 并静态链接（系统需另装 libde265 等解码器）。
[target.'cfg(not(windows))'.dependencies]
libheif-rs = { version = "2.7", default-features = false, features = ["v1_17", "image", "embedded-libheif"] }

# Windows(MSVC)：libheif-sys 的 build.rs 通过 vcpkg crate（读 VCPKG_ROOT）定位已装的 libheif。
# libde265(HEVC 解码器, LGPL) 是 libheif 的基础依赖，自动装；aom 提供 AVIF 解码。
# 关键：feature 里的 `core` 关闭 vcpkg 默认 feature，从而排除默认的 `hevc`(=GPL 的 x265 编码器)。
#
# 用【静态】链接(x64-windows-static-md)：libheif+libde265+aom 全部静态链入 easytidy_converter.dll，
# 不产生独立 heif.dll，部署只需 1 个 DLL。
#
# 为什么不用动态(x64-windows)：实测 vcpkg 的 libheif 1.21.2 【共享】heif.dll 在被 LoadLibrary 加载时，
# 其初始化(DllMain/全局构造，注册内置编解码器)必定失败，返回 0x8007045A(ERROR_DLL_INIT_FAILED)。
# 已用 LOAD_LIBRARY_AS_DATAFILE 证实：文件与依赖(aom/de265/CRT)都正常，纯粹是 init 阶段失败；
# 换目录、按依赖顺序预载、AddDllDirectory/PATH(easytidy_extract 的加载法)均无法规避——它治的是
# "找不到依赖(0x7E)"，治不了"init 失败(0x45A)"。静态链接把编解码器注册移到我们自己 DLL 的初始化，
# 绕过该缺陷。static-md 用动态 CRT(MD)，与 Rust MSVC 默认 ABI 一致，无需 +crt-static。
#
# LGPL-3.0 合规(闭源商用)：静态链接走 §4(d)(0) —— 需让用户能对(经修改的)libheif 重新链接。
# 因 easytidy_converter 计划【单独开源】(与闭源 C# 主程序经 C ABI/P-Invoke 隔离，非 combined work)，
# 提供其完整源码即满足"可重链接"要求；随产品分发 ThirdPartyNotices 声明 LGPL 组件与源码地址。
#
# 手动安装(用你本机的 vcpkg，非 cargo-vcpkg)：
#   vcpkg install "libheif[core,aom]:x64-windows-static-md"
# 构建(不要设 VCPKGRS_DYNAMIC，否则会去找 x64-windows 动态库)：
#   VCPKG_ROOT=<vcpkg 路径> cargo build --release
# 下面的 metadata 仅供将来改用 cargo-vcpkg 时参考，手动路线不读它。
[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2026.05.25"
dependencies = ["libheif"]

[package.metadata.vcpkg.target]
# core = 关闭默认 feature(排除 GPL 的 hevc/x265)；aom = AVIF 解码。de265 解码器随基础依赖自动带入。
# 静态链入主 DLL，故无需随附任何 heif/de265/aom/x265 的 .dll。
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = ["libheif[core,aom]"] }

[profile.release]
opt-level = "z"       # 🌟 核心：从 "3"（优化速度）改为 "z"（追求极致的最小体积）
lto = true            # 🌟 核心：开启全局链接期优化 (Link-Time Optimization)，剔除跨 Crate 的死代码
codegen-units = 1     # 🌟 核心：将并行编译单元限制为 1，牺牲编译速度以换取更极致的全局优化和死代码剔除
panic = "unwind"     # 🌟 核心：FFI 层 (lib.rs) 依赖 std::panic::catch_unwind 捕获 panic 并转成错误码返回给 C#。
                     # 必须是 "unwind"：若设为 "abort"，catch_unwind 会失效，任何 panic 都会直接终止宿主进程（C# 应用闪退）。
strip = true          # 🌟 核心：彻底剥离 DLL 中残存的所有符号表、调试信息、行号，可直接暴减十几兆体积
